[gd_scene load_steps=12 format=3 uid="uid://l7iqckuwewwv"]

[ext_resource type="Script" path="res://tiles/room/room.gd" id="1_o0wdy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mr0w6"]
size = Vector2(224, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sndrs"]
size = Vector2(224, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r362t"]
size = Vector2(32, 224)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44fcn"]
size = Vector2(32, 224)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88ccn"]
size = Vector2(32, 224)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4h6h0"]
size = Vector2(32, 224)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mn652"]
size = Vector2(128, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lkr7v"]
size = Vector2(32, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hcfm1"]
size = Vector2(32, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sikks"]
size = Vector2(576, 496)

[node name="room" type="Node2D" groups=["room"]]
script = ExtResource("1_o0wdy")

[node name="bg_color" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 560.0
grow_horizontal = 2
grow_vertical = 2

[node name="walls" type="StaticBody2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="walls"]
position = Vector2(144, 16)
shape = SubResource("RectangleShape2D_mr0w6")

[node name="collision2" type="CollisionShape2D" parent="walls"]
position = Vector2(496, 16)
shape = SubResource("RectangleShape2D_sndrs")

[node name="collision3" type="CollisionShape2D" parent="walls"]
position = Vector2(144, 544)
shape = SubResource("RectangleShape2D_mr0w6")

[node name="collision4" type="CollisionShape2D" parent="walls"]
position = Vector2(496, 544)
shape = SubResource("RectangleShape2D_sndrs")

[node name="collision5" type="CollisionShape2D" parent="walls"]
position = Vector2(16, 112)
shape = SubResource("RectangleShape2D_r362t")

[node name="collision6" type="CollisionShape2D" parent="walls"]
position = Vector2(16, 448)
shape = SubResource("RectangleShape2D_44fcn")

[node name="collision7" type="CollisionShape2D" parent="walls"]
position = Vector2(624, 112)
shape = SubResource("RectangleShape2D_88ccn")

[node name="collision8" type="CollisionShape2D" parent="walls"]
position = Vector2(624, 448)
shape = SubResource("RectangleShape2D_4h6h0")

[node name="door_up" type="StaticBody2D" parent="."]
position = Vector2(320, 16)

[node name="collision" type="CollisionShape2D" parent="door_up"]
shape = SubResource("RectangleShape2D_mn652")

[node name="door_down" type="StaticBody2D" parent="."]
position = Vector2(320, 544)

[node name="collision" type="CollisionShape2D" parent="door_down"]
shape = SubResource("RectangleShape2D_mn652")

[node name="door_right" type="StaticBody2D" parent="."]
position = Vector2(624, 279)

[node name="collision" type="CollisionShape2D" parent="door_right"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_lkr7v")

[node name="door_left" type="StaticBody2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="door_left"]
position = Vector2(16, 280)
shape = SubResource("RectangleShape2D_hcfm1")

[node name="room_area" type="Area2D" parent="."]
position = Vector2(320, 280)

[node name="collision" type="CollisionShape2D" parent="room_area"]
shape = SubResource("RectangleShape2D_sikks")
debug_color = Color(0.701961, 0, 0.666667, 0)

[connection signal="body_entered" from="room_area" to="." method="_on_room_area_body_entered"]
